2003-03-31  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* docs/bnf.txt :
	* parser/parser.y :

	  - Since the difference between a ground and a non-ground atom /
	    expression do not exist at parse time, they are now combined
	    together.

	* common/list.cpp :

	  - Fixed get() and del() to make sure that data is retrieved/deleted
	    in the right order. Used to be in reverse order, which was carried
	    over from epilog.

	* kb/kb.cpp :

	  - Now add_transtab() allows precond and varlist to be null.

	  - in verify_atom_member() and verify_atom_subset(), if one ident
	    is a variable, the type checking is skipped.

	* parser/parser.y :

	  - Added kb::add_transtab().

	* common/stringlist.h :
	* common/stringlist.cpp :

	  - Added debug function print().

	* kb/kb.cpp :
	* kb/kb.h :

	  - Fixed add_transtab(). 

	  - verify_atom() now checks both ground and non-ground atoms.

	* kb/transtab.cpp :

	  - cmp() function will now return true if only the name matches.


2003-03-28  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/Makefile.in :

	  - Fixed dependencies.

	* kb/transtab.h :
	* kb/transtab.cpp :

	  - Added a table for storing transformation declarations.

	* kb/consttab.h :
	* kb/consttab.cpp :

	  - Now stores expressions instead of an integer list.

	* kb/kb.h :
	* kb/kb.cpp :

	  - Fixed stages.

	* kb/kb.h :
	* kb/kb.cpp :
	* parser/parser.y :

	  - Added support for storing constraints.

	* samples/chinese_wall :

	  - Modified to add constraints.

	* kb/atom.cpp :

	  - Dupicates are not allowed.

2003-03-27  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/atom.cpp :
	* kb/atom.h :

	  - Added get_*() functions.

	  - Added init_atom() to effectively copy the contents of a given
	    atom.

	* kb/expression.cpp :
	* kb/expression.h :

	  - Added a get() function.

	* kb/kb.cpp :
	* kb/kb.h :

	  - Added init table and add_inittab() function.

	* kb/symtab.cpp :
	* kb/symtab.h :
